--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -53,7 +53,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-4 col-xs-12">
-          <h3 class="links-title">Theo dõi qua Fanpage<a class="expander visible-xs" href="#TabBlock-1">+</a></h3>
+          <h3 class="links-title">Theo dõi qua Fanpage<a class="expander visible-xs" href="#TabBlock-1"></a></h3>
           <div class="fb-page" data-href="https://www.facebook.com/dangminhpc70/?ref=embed_page" data-tabs="timeline" data-width="350"
             data-height="130" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
             data-show-facepile="true">
