--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -140,7 +140,7 @@
                       Thêm vào giỏ
                     </button>
                     <ul>
-                      <li class=""> <a [routerLink]="['/danh-sach-yeu-thich']"> <i class="fa fa-heart-o"></i><span> Thêm vào yêu
+                      <li class=""> <a  (click)="addToFavorite(item)"> <i class="fa fa-heart-o"></i><span> Thêm vào yêu
                             thích</span> </a> </li>
                       <!-- <li> <a [routerLink]="['/so-sanh']"> <i class="fa fa-link"></i><span> Add to Compare</span> </a> </li> -->
                     </ul>
